<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Times Table</string>
    <string name="menu_settings">Settings</string>
    <string name="tt_title">Times Table Test</string>
    <string name="tt_no_of_questions">Questions per table:</string>
    <string name="tt_tables_to_test">Choose the timetables you want to practise:</string>
    <string name="tt_try_question__of__">Try question %1$d of %2$d</string>
    
    <string name="tt_correct_answers">Correct Answers: </string>
    <string name="tt_incorrect_answers">Incorrect Answers: </string>
    <string name="tt_test_complete">Test finished!</string>
    <string name="tt_total_questions">Total test questions: </string>
    <string name="ia_test_button">Take Test On These Questions</string>
    <string name="tt_question_fmt">%1$d x %2$d =</string>
    
    <string-array name="tt_number_questions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="tt_available_tables">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="tt_button_start">Start Test</string>
    <string name="title_activity_test">Test Activity</string>
    <string name="button_answer">Answer Question</string>
    <string name="button_rerun">Repeat Same Test</string>
    <string name="button_new">New Test</string>
    <string name="button_show_incorrect">Show Incorrect Answers</string>
    <string name="button_test_incorrect">Test Incorrect</string>
    <string name="title_activity_incorrect_answers">IncorrectAnswersActivity</string>
    <string name="tt_numpad_answer">Answer</string>
    <string name="tt_numpad_one">1</string>
    <string name="tt_numpad_two">2</string>
    <string name="tt_numpad_three">3</string>
    <string name="tt_numpad_four">4</string>
    <string name="tt_numpad_five">5</string>
    <string name="tt_numpad_six">6</string>
    <string name="tt_numpad_seven">7</string>
    <string name="tt_numpad_eight">8</string>
    <string name="tt_numpad_nine">9</string>
    <string name="tt_numpad_clear">C</string>
    <string name="tt_numpad_bkspc">⇐</string>
    <string name="tt_numpad_zero">0</string>
    <string name="tt_finished_message">Well Done!</string>
    <string name="tt_complete_publish_score_upsell">You completed the test! If you think you did a good job, you can post your highscore to compete against your friends!</string>
    <string name="tt_publish_score">Publish Score</string>
    <string name="tt_test_again">Try Another Test</string>

</resources>