<?xml version="1.0" encoding="utf-8"?>
<uk.co.burchy.timestable.view.NumPadView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/key_answer"
        style="@style/tt_numpad_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/key_1"
        android:layout_alignRight="@+id/key_3"
        android:text="@string/tt_numpad_answer" />

    <Button
        android:id="@+id/key_1"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_answer"
        android:layout_toLeftOf="@+id/key_2"
        android:text="@string/tt_numpad_one" />

    <Button
        android:id="@+id/key_2"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_answer"
        android:layout_centerHorizontal="true"
        android:text="@string/tt_numpad_two" />

    <Button
        android:id="@+id/key_3"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_answer"
        android:layout_toRightOf="@+id/key_2"
        android:text="@string/tt_numpad_three" />

    <Button
        android:id="@+id/key_4"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_1"
        android:layout_toLeftOf="@+id/key_2"
        android:text="@string/tt_numpad_four" />

    <Button
        android:id="@+id/key_5"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_1"
        android:layout_centerHorizontal="true"
        android:text="@string/tt_numpad_five" />

    <Button
        android:id="@+id/key_6"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_1"
        android:layout_toRightOf="@+id/key_2"
        android:text="@string/tt_numpad_six" />

    <Button
        android:id="@+id/key_7"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_4"
        android:layout_toLeftOf="@+id/key_2"
        android:text="@string/tt_numpad_seven" />

    <Button
        android:id="@+id/key_8"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_4"
        android:layout_centerHorizontal="true"
        android:text="@string/tt_numpad_eight" />

    <Button
        android:id="@+id/key_9"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_4"
        android:layout_toRightOf="@+id/key_2"
        android:text="@string/tt_numpad_nine" />

    <Button
        android:id="@+id/key_clr"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_7"
        android:layout_toLeftOf="@+id/key_2"
        android:text="@string/tt_numpad_clear" />

    <Button
        android:id="@+id/key_0"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_7"
        android:layout_centerHorizontal="true"
        android:text="@string/tt_numpad_zero" />

    <Button
        android:id="@+id/key_bkspc"
        style="@style/tt_numpad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_7"
        android:layout_toRightOf="@+id/key_2"
        android:text="@string/tt_numpad_bkspc" />

</uk.co.burchy.timestable.view.NumPadView>