<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/tt_textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tt_finished_message" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:text="@string/tt_complete_publish_score_upsell"/>

    <View android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <Button android:id="@+id/tt_publish_score"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/tt_publish_score"
        />
    
    <Button android:id="@+id/tt_take_another"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="32dp"
        android:text="@string/tt_test_again"/>
</LinearLayout>
